# Alabaster

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  alabaster.code-workspace  alabaster.py  compile_shaders.py  imgui.ini  run.sh  run_win.sh
.fleet/: run.json
app/: AlabasterLayer.cpp  AlabasterLayer.hpp  CMakeLists.txt  imgui.ini  main.cpp  move.py
app/include/: FileDragDropHandler.hpp
app/include/panels/: DirectoryContentPanel.hpp  Panel.hpp  SceneEntitiesPanel.hpp  StatisticsPanel.hpp
app/resources/scene/: Test.scene
app/resources/scripts/: move.py
app/resources/shaders/: car.frag  car.vert  line.frag  line.vert  main.frag  main.vert  mesh.frag  mesh.vert  mesh_light.frag  mesh_light.vert  mesh_shadow_pass.frag  mesh_shadow_pass.vert  old.frag  old.vert  quad_light.frag  quad_light.vert  viking.frag  viking.vert
app/src/panels/: DirectoryContentPanel.cpp  SceneEntitiesPanel.cpp  StatisticsPanel.cpp
libs/AlabasterShaderCompiler/: CMakeLists.txt
libs/AlabasterShaderCompiler/include/: AlabasterShaderCompiler.hpp  asc_pch.hpp
libs/AlabasterShaderCompiler/include/cache/: ShaderCache.hpp
libs/AlabasterShaderCompiler/include/compiler/: ShaderCompiler.hpp
libs/AlabasterShaderCompiler/src/cache/: ShaderCache.cpp
libs/AlabasterShaderCompiler/src/compiler/: ShaderCompiler.cpp
libs/AlabasterShaderCompiler/tests/: CMakeLists.txt
libs/AlabasterShaderCompiler/tests/compiler/: PlatformTest.cpp
libs/AlabasterView/: CMakeLists.txt
libs/AlabasterView/include/: Alabaster.hpp  av_pch.hpp
libs/AlabasterView/include/codes/: KeyCode.hpp  MouseCode.hpp
libs/AlabasterView/include/core/: Application.hpp  AssetLoader.hpp  CPUProfiler.hpp  Clock.hpp  Common.hpp  EntryPoint.hpp  GUILayer.hpp  Input.hpp  Layer.hpp  Logger.hpp  Timer.hpp  Utilities.hpp  Window.hpp
libs/AlabasterView/include/graphics/: Allocator.hpp  Buffer.hpp  Camera.hpp  CommandBuffer.hpp  GraphicsContext.hpp  Image.hpp  IndexBuffer.hpp  Material.hpp  Mesh.hpp  Pipeline.hpp  PushConstantRange.hpp  RenderPass.hpp  RenderQueue.hpp  Renderer.hpp  Renderer3D.hpp  SceneRenderer.hpp  Shader.hpp  SimpleCamera.hpp  Swapchain.hpp  Texture.hpp  UniformBuffer.hpp  Vertex.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
libs/AlabasterView/include/utilities/: FileInputOutput.hpp
libs/AlabasterView/src/core/: Allocator.cpp  Application.cpp  CPUProfiler.cpp  GUILayer.cpp  Logger.cpp
libs/AlabasterView/src/graphics/: Camera.cpp  CommandBuffer.cpp  Mesh.cpp  RenderQueue.cpp  Renderer.cpp  SimpleCamera.cpp  Texture.cpp
libs/AlabasterView/src/utilities/: FileInputOutput.cpp
libs/AlabasterView/tests/: CMakeLists.txt  main.cpp
libs/AlabasterView/tests/core/: CommonTest.cpp
libs/AlabasterView/tests/graphics/: GraphicsTest.cpp
libs/AlabasterView/tests/platform/: PlatformTest.cpp
libs/AssetManager/: CMakeLists.txt
libs/AssetManager/include/: AssetManager.hpp  AssetManagerForward.hpp  am_pch.hpp
libs/AssetManager/include/cache/: BaseCache.hpp  ImageCache.hpp  ResourceCache.hpp  ShaderCache.hpp  TextureCache.hpp
libs/AssetManager/include/compiler/: ShaderCompiler.hpp  ShaderReflector.hpp
libs/AssetManager/include/utilities/: StringHash.hpp  ThreadPool.hpp
libs/AssetManager/include/watcher/: FileWatcher.hpp
libs/AssetManager/src/cache/: ImageCache.cpp  ResourceCache.cpp  ShaderCache.cpp  TextureCache.cpp
libs/AssetManager/src/compiler/: ShaderCompiler.cpp  ShaderReflector.cpp
libs/AssetManager/src/watcher/: FileWatcher.cpp
libs/AssetManager/tests/: CMakeLists.txt
libs/AssetManager/tests/compiler/: PlatformTest.cpp
libs/AssetManager/tests/utils/: LeakDetector.cpp  LeakDetector.hpp
libs/Core/: CMakeLists.txt
libs/Core/include/: Alabaster.hpp  CoreForward.hpp  av_pch.hpp
libs/Core/include/core/: Application.hpp  Buffer.hpp  CPUProfiler.hpp  Clock.hpp  Common.hpp  EntryPoint.hpp  GUILayer.hpp  Layer.hpp  Logger.hpp  OpenMode.hpp  Random.hpp  Timer.hpp  UUID.hpp  Utilities.hpp  Window.hpp
libs/Core/include/filesystem/: FileSystem.hpp
libs/Core/include/graphics/: Allocator.hpp  Buffer.hpp  Camera.hpp  CommandBuffer.hpp  DepthImage.hpp  FormatUtilities.hpp  Framebuffer.hpp  GraphicsContext.hpp  Image.hpp  IndexBuffer.hpp  Material.hpp  Mesh.hpp  Pipeline.hpp  PushConstantRange.hpp  RenderQueue.hpp  Renderable.hpp  Renderer.hpp  Renderer3D.hpp  Shader.hpp  SimpleCamera.hpp  Swapchain.hpp  Texture.hpp  UniformBuffer.hpp  Vertex.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  VulkanSwapChain.hpp
libs/Core/include/ui/: ImGui.hpp  ImGuizmo.hpp
libs/Core/include/utilities/: BitCast.hpp  FileInputOutput.hpp  FileSystem.hpp  HashStringView.hpp  Time.hpp
libs/Core/src/core/: Allocator.cpp  Application.cpp  CPUProfiler.cpp  Common.cpp  GUILayer.cpp  Logger.cpp  LoggerSpecialisation.cpp  UUID.cpp
libs/Core/src/graphics/: Camera.cpp  CommandBuffer.cpp  Framebuffer.cpp  Mesh.cpp  PushConstantRange.cpp  RenderQueue.cpp  Renderer.cpp  SimpleCamera.cpp  Swapchain.cpp  Texture.cpp
libs/Core/src/ui/: ImGui.cpp
libs/Core/src/utilities/: FileInputOutput.cpp  FileSystem.cpp  Time.cpp
libs/Core/tests/: CMakeLists.txt  main.cpp
libs/Core/tests/core/: CommonTest.cpp
libs/Core/tests/graphics/: GraphicsTest.cpp
libs/Core/tests/platform/: PlatformTest.cpp
libs/Core/tests/utils/: UtilsTest.cpp
libs/Scene/: CMakeLists.txt
libs/Scene/include/: SceneForward.hpp  SceneSystem.hpp  scene_pch.hpp
libs/Scene/include/component/: Component.hpp  ScriptEntity.hpp
libs/Scene/include/entity/: Entity.hpp
libs/Scene/include/scene/: Scene.hpp
libs/Scene/include/serialisation/: ComponentDeserialiser.hpp  ComponentSerialiser.hpp  JsonSubcomponentSerialiser.hpp  SceneDeserialiser.hpp  SceneSerialiser.hpp
libs/Scene/src/component/: Component.cpp
libs/Scene/src/entity/: Entity.cpp
libs/Scene/src/scene/: Scene.cpp
libs/Scene/tests/: CMakeLists.txt
libs/Scripting/: CMakeLists.txt
libs/Scripting/include/: Scripting.hpp  script_pch.hpp
libs/Scripting/tests/: CMakeLists.txt  interpreter_tests.cpp  main.cpp
(+90 files in other folders)
