cmake_minimum_required(VERSION 3.21)

project(
	Alabaster
	VERSION 0.0.1
	LANGUAGES CXX)

if(WIN32)
	set(FT_DISABLE_HARFBUZZ ON)
	set(ALABASTER_OS "Windows")
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	set(ALABASTER_OS "MacOS")
else()
  	set(ALABASTER_OS "Linux")
endif()

message(STATUS "ALABASTER: Chosen OS: ${ALABASTER_OS}")

if(CMAKE_GENERATOR STREQUAL Xcode)
	set(XCODE_SCHEME_ENABLE_GPU_API_VALIDATION ON)
	set(XCODE_SCHEME_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set(XCODE_SCHEME_ENABLE_GPU_SHADER_VALIDATION ON)
endif()

set(CMAKE_SUPPRESS_REGENERATION ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Shaderc CMake legacy fix
set(CMAKE_POLICY_DEFAULT_CMP0054 NEW)
set(CMAKE_POLICY_DEFAULT_CMP0048 NEW)
set(CMAKE_POLICY_DEFAULT_CMP0042 NEW)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)

set_property(GLOBAL PROPERTY CTEST_TARGETS_ADDED 1)

include(CTest)
add_subdirectory(third_party)
add_subdirectory(libs)
add_subdirectory(app)
